Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40995

Qt Android application crashes during page switch.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.4.0 Beta
    • 5.4.0
    • None
    • Android
    • 395d865b8047f5ac20a082e846e37ceeb1c7afbd

    Description

      Qt Android application crashes during page switch.

      Steps:
      1. Run attached qml on Android device.
      2. Tap "Second page" button
      3. Tap TextInput
      4. Tap "Back" button
      5. Repeat 2-4 until crash

      Application output:
      F/libc (27909): Fatal signal 11 (SIGSEGV) at 0x00000005 (code=1), thread 27943

      Attachments

        For Gerrit Dashboard: QTBUG-40995
        # Subject Branch Project Status CR V

        Activity

          People

            tvete Paul Olav Tvete
            samuelnevala Samuel Nevala
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes